k8s/yamls/04-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-pixel-challenge-service
  namespace: my-pixel-challenge
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: my-pixel-challenge
