k8s/yamls/05-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-pixel-challenge-ingress
  namespace: my-pixel-challenge
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: my-pixel-challenge.rodolphe-laidet.com
    http:
      paths:
      - backend:
          serviceName: my-pixel-challenge-service
          servicePort: 3000
        path: /
  tls:
  - hosts:
    - my-pixel-challenge.rodolphe-laidet.com
    secretName: my-pixel-challenge-rodolphe-laidet-com-tls
