k8s/yamls/06-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-pixel-challenge-ingress
  namespace: my-pixel-challenge
spec:
  rules:
  - host: my-pixel-challenge.rodolphe-laidet.com
    http:
      paths:
      - backend:
          serviceName: my-pixel-challenge-service
          servicePort: 3000
        path: /
  tls:
  - hosts:
    - my-pixel-challenge.rodolphe-laidet.com
    secretName: my-pixel-challenge-rodolphe-laidet-com-tls
